--- a/frontend/index.html
+++ b/frontend/index.html
@@ -309,6 +309,33 @@
                     ERROR: '#ef4444',
                     WARNING: '#f59e0b'
                 }
+            },
+            NOTIFICATIONS: {
+                DURATION: {
+                    SUCCESS: 3000,
+                    ERROR: 5000,
+                    WARNING: 4000,
+                    INFO: 3000
+                },
+                POSITION: 'top-right'
+            },
+            UPDATE_INTERVALS: {
+                PRICES: 30000,
+                SIGNALS: 60000,
+                CHART: 15000
+            },
+            TIMEFRAMES: [
+                { value: '5m', label: '5 Minutes' },
+                { value: '15m', label: '15 Minutes' },
+                { value: '30m', label: '30 Minutes' },
+                { value: '1h', label: '1 Hour' },
+                { value: '4h', label: '4 Hours' },
+                { value: '1d', label: '1 Day' }
+            ],
+            STORAGE_KEYS: {
+                THEME: 'forex_theme',
+                WATCHLIST: 'forex_watchlist',
+                SETTINGS: 'forex_settings'
             }
         };
         
