--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Forex Analysis Pro - Advanced Trading Platform</title>
     
     <!-- Styles -->
-    <link rel="stylesheet" href="static/css/styles.css?v=2.2">
+    <link rel="stylesheet" href="static/css/styles.css?v=2.3">
     
     <!-- External Libraries -->
     <script src="https://unpkg.com/plotly.js@2.26.0/dist/plotly.min.js"></script>
@@ -44,16 +44,23 @@
         <div class="loading-text">Loading Forex Analysis Pro...</div>
     </div>
 
-    <!-- Debug Panel (temporary for testing) -->
-    <div id="debug-panel" style="position: fixed; top: 10px; right: 10px; background: rgba(0,0,0,0.8); color: white; padding: 10px; border-radius: 5px; z-index: 10000; font-size: 12px;">
-        <div style="margin-bottom: 5px;">
+    <!-- Debug Panel (collapsible) -->
+    <div id="debug-panel" class="debug-panel">
+        <div class="debug-panel-header">
             <strong>Debug Panel</strong>
+            <button class="debug-close-btn" onclick="toggleDebugPanel()" aria-label="Close debug panel">
+                <i class="fas fa-times"></i>
+            </button>
         </div>
-        <div id="config-status" style="margin-bottom: 5px; font-size: 11px;">
-            CONFIG: <span style="color: orange;">Checking...</span>
+        <div class="debug-panel-content">
+            <div id="config-status" class="debug-item">
+                CONFIG: <span style="color: orange;">Checking...</span>
+            </div>
+            <button onclick="testApiConnection()" class="debug-test-btn">
+                <i class="fas fa-plug"></i> Test API
+            </button>
+            <div id="debug-status" class="debug-status">Ready</div>
         </div>
-        <button onclick="testApiConnection()" style="background: #007bff; color: white; border: none; padding: 5px 10px; border-radius: 3px; cursor: pointer;">Test API</button>
-        <div id="debug-status" style="margin-top: 5px;">Ready</div>
     </div>
 
     <!-- Header -->
@@ -82,6 +89,9 @@
             <div class="header-controls">
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
                     <i class="fas fa-moon"></i>
+                </button>
+                <button class="debug-toggle" id="debug-toggle" onclick="toggleDebugPanel()" aria-label="Toggle debug panel" title="Toggle Debug Panel">
+                    <i class="fas fa-bug"></i>
                 </button>
                 <div class="connection-status" id="connection-status">
                     <i class="fas fa-circle"></i>
@@ -363,7 +373,7 @@
     <script src="static/js/utils.js?v=2.0" onload="console.log('utils.js loaded')" onerror="console.error('Failed to load utils.js')"></script>
     <script src="static/js/chart.js?v=2.0" onload="console.log('chart.js loaded')" onerror="console.error('Failed to load chart.js')"></script>
     <script src="static/js/signals.js?v=2.0" onload="console.log('signals.js loaded')" onerror="console.error('Failed to load signals.js')"></script>
-    <script src="static/js/app.js?v=2.2" onload="console.log('app.js loaded')" onerror="console.error('Failed to load app.js')"></script>
+    <script src="static/js/app.js?v=2.3" onload="console.log('app.js loaded')" onerror="console.error('Failed to load app.js')"></script>
 
     <script>
         // Check CONFIG status when page loads
