Frontend: Add Forex/Crypto toggle and update signals/analysis filtering by market type

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,10 @@
                 </nav>
                 
                 <div class="header-controls">
+                    <div class="market-toggle" style="display: inline-block; margin-right: 1rem;">
+                        <button class="market-btn" id="forex-btn" onclick="setMarketType('forex')">Forex</button>
+                        <button class="market-btn" id="crypto-btn" onclick="setMarketType('crypto')">Crypto</button>
+                    </div>
                     <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
                         <i class="fas fa-moon"></i>
                     </button>
