Fix Forex/Crypto toggle functionality - Added market toggle to main app interface and global setMarketType function

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -94,6 +94,10 @@
             </nav>
             
             <div class="header-controls">
+                <div class="market-toggle">
+                    <button class="market-btn active" id="forex-btn" onclick="setMarketType('forex')">Forex</button>
+                    <button class="market-btn" id="crypto-btn" onclick="setMarketType('crypto')">Crypto</button>
+                </div>
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
                     <i class="fas fa-moon"></i>
                 </button>
