FIX: Browser & mobile compatibility improvements (meta tags, polyfills, responsive viewport)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">  <!-- Ensure latest IE rendering engine -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">  <!-- Responsive on mobile -->
     <title>Forex Analysis Pro - Professional Trading Platform</title>
     
     <!-- Styles -->
     <link rel="stylesheet" href="static/css/styles.css?v=2.7">
     <link rel="stylesheet" href="static/css/home.css?v=1.2">
     
+    <!-- Polyfills for older browsers -->
+    <script src="https://cdn.jsdelivr.net/npm/core-js-bundle@3.22.0/minified.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.9/runtime.min.js"></script>
     <!-- External Libraries -->
     <script src="https://unpkg.com/plotly.js@2.26.0/dist/plotly.min.js"></script>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
