FIX: Add apple-touch-icon link and correct manifest icon paths for PWA

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,8 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon.ico">
 </head>
 <body class="dark-theme home-page">
     <!-- Hero Section -->
